@@ -7,11 +7,15 @@ describe "drop_body plugin" do
       response.write('a')
     end
 
-    [101, 102, 204, 205, 304].each do  |i|
+    [101, 102, 204, 304].each do  |i|
       body(i.to_s).must_equal ''
       header('Content-Type', i.to_s).must_be_nil
       header('Content-Length', i.to_s).must_be_nil
     end
+
+    body('205').must_equal ''
+    header('Content-Type', '205').must_be_nil
+    header('Content-Length', '205').must_equal '0'
 
     body('200').must_equal 'a'
     header('Content-Type', '200').must_equal 'text/html'
