@@ -65,14 +65,26 @@ describe "response #finish" do
     header('Content-Length').must_equal '1'
   end
 
-  it "should not set Content-Type header on a 204 response" do
+  [204, 304, 100].each do |status|
+    it "should not set Content-Type or Content-Length header on a #{status} response" do
+      app do |r|
+        response.status = status
+        throw :halt, response.finish
+      end
+
+      header('Content-Type').must_be_nil
+      header('Content-Length').must_be_nil
+    end
+  end
+
+  it "should not set Content-Type header on a 205 response, but should set a Content-Length header" do
     app do |r|
-      response.status = 204
+      response.status = 205
       throw :halt, response.finish
     end
 
     header('Content-Type').must_be_nil
-    header('Content-Length').must_be_nil
+    header('Content-Length').must_equal '0'
   end
 
   it "should not overwrite existing status" do
